--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
     "@react-email/render": "^1.3.1",
     "bcryptjs": "^3.0.2",
-    "better-auth": "^1.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.1.7",
     "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
-    "next": "15.5.2",
-    "next-video": "^2.5.0",
+    "next": "^15.5.9",
+    "next-auth": "^4.24.13",
+    "next-video": "^0.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
